// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. comment lead and cartoon - small 1`] = `
<div>
  <div>
    lead-1
  </div>
  <div
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
      }
    }
  />
  <div>
    cartoon-1
  </div>
</div>
`;

exports[`2. comment lead and cartoon - medium 1`] = `
<div
  style={
    Object {
      "WebkitBoxDirection": "normal",
      "WebkitBoxFlex": 1,
      "WebkitBoxOrient": "horizontal",
      "WebkitFlexBasis": "0%",
      "WebkitFlexDirection": "row",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexDirection": "row",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexDirection": "row",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
      "paddingBottom": "5px",
      "paddingLeft": "20px",
      "paddingRight": "20px",
      "paddingTop": "5px",
    }
  }
>
  <div
    style={
      Object {
        "width": "33.3%",
      }
    }
  >
    <div>
      lead-1
    </div>
  </div>
  <div
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    style={
      Object {
        "width": "66.7%",
      }
    }
  >
    <div>
      cartoon-1
    </div>
  </div>
</div>
`;

exports[`3. comment lead and cartoon - wide 1`] = `
<div
  style={
    Object {
      "WebkitBoxDirection": "normal",
      "WebkitBoxFlex": 1,
      "WebkitBoxOrient": "horizontal",
      "WebkitFlexBasis": "0%",
      "WebkitFlexDirection": "row",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexDirection": "row",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexDirection": "row",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
      "paddingBottom": "5px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "5px",
    }
  }
>
  <div
    style={
      Object {
        "width": "33.3%",
      }
    }
  >
    <div>
      lead-1
    </div>
  </div>
  <div
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    style={
      Object {
        "width": "66.7%",
      }
    }
  >
    <div>
      cartoon-1
    </div>
  </div>
</div>
`;
